<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello hotline!</string>
    <string name="app_name">热线维修</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="user_name">姓名:</string>
    <string name="showInvisible">dd</string>
    <string name="addContactButtonLabel">aa</string>
    <string name="start_work">开始工作</string>
    <string name="UserName">姓名:</string>
    <string name="Password">密码:</string>
    <string name="Confirm">登录</string>
    <string name="Cancel">取消</string>
</resources>
