<?xml version="1.0" encoding="utf-8"?>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:binding="http://www.gueei.com/android-binding/"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/loginbg"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/logoframebg"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/UserName"
                        android:textColor="@color/Logintext"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:drawableLeft="@drawable/loginidicon"
                        android:ems="10"
                        android:textSize="15sp"
                        binding:text="Name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Password"
                        android:textColor="@color/Logintext"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:drawableLeft="@drawable/loginpasswordicon"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        binding:text="Password" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="记住密码"
                        android:textColor="@color/Logintext"
                        android:textSize="@dimen/textSize"
                        android:visibility="gone" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="自动登录"
                        android:textColor="@color/Logintext"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
            <Button
                    android:id="@+id/button1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/loginbtnxml"
                    android:text="@string/Confirm"
                    binding:onClick="Login" />
            <TextView
                    android:id="@+id/appVersion"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="35dp"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />
        </LinearLayout>